--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tap test/*.js --cov -J"
   },
   "devDependencies": {
-    "tap": "^10.7.0"
+    "tap": "http://github.com/jBarz/node-tap/archive/v10.7.0.zos.tar.gz"
   },
   "license": "ISC",
   "repository": "https://github.com/npm/node-semver",
